Fix background not loading on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,15 +43,11 @@ body {
 }
 
 .bg-img {
-  
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
-  z-index: -10;
   background-size: cover;
   -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
 }
 
 
